--- a/client/resources/assets/sass/global/_template.scss
+++ b/client/resources/assets/sass/global/_template.scss
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 body {
@@ -13,7 +15,11 @@ body {
   outline: none;
 }
 
-.container {
-  margin: 2em auto;
-  width: 800px;
+.layout {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
+
+@import "header";
