Some homepage styling

--- a/client/resources/assets/partials/header.html
+++ b/client/resources/assets/partials/header.html
@@ -1,1 +1,6 @@
-This is the header...
+<div class="title">Marketing Experiments</div>
+
+<ul class="controls">
+    <li><a class="hollow-button main">Sign Up</a></li>
+    <li><a class="hollow-button black">Log In</a></li>
+</ul>
