--- a/client/resources/assets/partials/home.html
+++ b/client/resources/assets/partials/home.html
@@ -1,2 +1,37 @@
-Hello world!
-<a href="test">testing...</a>
+<h1 class="main-heading"><i class="fa fa-flask"></i> Featured Experiments</h1>
+
+<section class="content-section">
+    <div class="content-box">
+        <div class="byline">
+            <span class="avatar" style="width: 38px; height: 38px; line-height: 41px; background-color: #8B9598;">WH</span>
+            <div class="content-meta">
+                <a>Wilson Hung</a>
+                <span class="content-meta-date">Just now</span>
+            </div>
+        </div>
+        <h2><a>Leveraging content marketing with Reddit</a></h2>
+        <p>Alright, unlike the purpose of the experiment, my goal here is not to self promote. This is me just sharing with you what I’ve learned, and the results of my experiment to determine the effectiveness of Reddit as an acquisition channel...</p>
+    </div>
+    <div class="content-box">
+        <div class="byline">
+            <span class="avatar" style="width: 38px; height: 38px; line-height: 41px; background-color: #8B9598;">KL</span>
+            <div class="content-meta">
+                <a>Kevin Lee</a>
+                <span class="content-meta-date">An hour ago</span>
+            </div>
+        </div>
+        <h2><a>Cold-calling with a twist</a></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius efficitur dolor, eu aliquam diam finibus nec. Donec ac massa id sem egestas consectetur. Morbi volutpat tellus ut ex lacinia laoreet. Phasellus at eros eu ex lacinia eleifend et ac augue...</p>
+    </div>
+    <div class="content-box">
+        <div class="byline">
+            <span class="avatar" style="width: 38px; height: 38px; line-height: 41px; background-color: #8B9598;">JS</span>
+            <div class="content-meta">
+                <a>John Smith</a>
+                <span class="content-meta-date">Yesterday</span>
+            </div>
+        </div>
+        <h2><a>Lukewarm Emailing</a></h2>
+        <p>Nam consequat commodo lacus, id vestibulum eros semper a. Nullam turpis ipsum, mattis cursus consectetur ac, ornare eget diam. Donec facilisis et nisi quis tristique. Nulla gravida nisi vel orci rhoncus, in aliquet elit tincidunt. Maecenas imperdiet hendrerit ornare. Aliquam erat...</p>
+    </div>
+</section>
