--- a/client/resources/assets/sass/_imports.scss
+++ b/client/resources/assets/sass/_imports.scss
@@ -1,4 +1,5 @@
 //Vendor
+@import "node_modules/normalize.scss/normalize";
 @import "node_modules/font-awesome/scss/font-awesome";
 @import "node_modules/medium-editor/src/sass/medium-editor";
 @import "node_modules/medium-editor/src/sass/themes/default";
