Load experiment previews on the home page.

--- a/client/resources/assets/partials/experiment-preview.html
+++ b/client/resources/assets/partials/experiment-preview.html
@@ -1,11 +1,14 @@
-<div class="content-box">
-    <div class="byline">
-        <span class="avatar" style="width: 38px; height: 38px; line-height: 41px; background-color: #8B9598;">WH</span>
-        <div class="content-meta">
-            <a>Wilson Hung</a>
-            <span class="content-meta-date">Just now</span>
-        </div>
+<div class="byline">
+    <span class="avatar"
+          style="width: 38px; height: 38px; line-height: 41px; background-color: #8B9598;">{{ author.initials }}</span>
+
+    <div class="content-meta">
+        <a>{{ author.fullname }}</a>
+        <span class="content-meta-date">Just now</span>
     </div>
-    <h2><a>Leveraging content marketing with Reddit</a></h2>
-    <p>Alright, unlike the purpose of the experiment, my goal here is not to self promote. This is me just sharing with you what I’ve learned, and the results of my experiment to determine the effectiveness of Reddit as an acquisition channel...</p>
 </div>
+<h2><a>{{ title }}</a></h2>
+
+<p>Alright, unlike the purpose of the experiment, my goal here is not to self promote. This is me just sharing with
+    you what I’ve learned, and the results of my experiment to determine the effectiveness of Reddit as an
+    acquisition channel...</p>
