Adding twitter sign-in

--- a/client/resources/assets/partials/header.html
+++ b/client/resources/assets/partials/header.html
@@ -1,6 +1,5 @@
 <div class="title">Marketing Experiments</div>
 
 <ul class="controls">
-    <li><a class="hollow-button main">Sign Up</a></li>
-    <li><a class="hollow-button black">Log In</a></li>
+    <li><a id="login" class="hollow-button main">Log In</a></li>
 </ul>
