--- a/client/resources/assets/sass/global/_buttons.scss
+++ b/client/resources/assets/sass/global/_buttons.scss
@@ -11,6 +11,7 @@
   line-height: 28px;
   cursor: pointer;
   transition: all ease 0.4s;
+  text-decoration: none;
 
   &:hover {
     opacity: 0.7;
