--- a/client/resources/assets/sass/global/_template.scss
+++ b/client/resources/assets/sass/global/_template.scss
@@ -32,7 +32,7 @@ body {
 #content {
   height: 100%;
   position: relative;
-  z-index: 590;
+  z-index: 1;
   padding: ($header-height + 1px) 0 0;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -54,6 +54,7 @@ a {
 
 @import "header";
 @import "buttons";
+@import "modal";
 
 .main-heading {
   font: 28px/38px $heading-font;
