Completed twitter signin.

--- a/client/resources/assets/partials/header.html
+++ b/client/resources/assets/partials/header.html
@@ -1,5 +1,5 @@
 <div class="title">Marketing Experiments</div>
 
 <ul class="controls">
-    <li><a id="login" class="hollow-button main">Log In</a></li>
+    <li><a id="login" class="hollow-button rounded main">Log In</a></li>
 </ul>
