--- a/client/resources/assets/partials/login.html
+++ b/client/resources/assets/partials/login.html
@@ -2,5 +2,6 @@
 <div class="modal-content">
     <h2>Login to join our community</h2>
     <p>Learn about the latest marketing tactics and experiment with them yourself!</p>
+    <a id="twitter-signin" class="button twitter">Sign in with Twitter</a>
     <p class="info">We'll never post to Twitter or Facebook without your permission.</p>
 </div>
