--- a/client/resources/assets/sass/global/_variables.scss
+++ b/client/resources/assets/sass/global/_variables.scss
@@ -7,3 +7,4 @@ $darker-color: #5C7FB2;
 
 $header-height: 52px;
 $heading-font: "Varela Round", Helvetica, Arial, sans-serif;
+$body-font: "Lato", Helvetica, Arial, sans-serif;
