--- a/client/resources/assets/sass/global/_variables.scss
+++ b/client/resources/assets/sass/global/_variables.scss
@@ -1,6 +1,7 @@
 $body-color: #485451;
 $faded-color: #adb6b9;
 
+$lightest-color: #EEF5FF;
 $lighter-color: #84B5FF;
 $main-color: #77A3E5;
 $darker-color: #5C7FB2;
