Add Experiment fancy button

--- a/client/resources/assets/partials/header.html
+++ b/client/resources/assets/partials/header.html
@@ -3,6 +3,9 @@
 <ul class="controls">
     {{#user}}
         <li>
+            <a id="add-experiment" href="/add-experiment" title="Add Experiment" class="plus-button"></a>
+        </li>
+        <li>
             <a id="profile" class="profile-button">{{user.name}}</a>
         </li>
     {{/user}}
