Trying to toggle Add Experiment button

--- a/client/resources/assets/partials/header.html
+++ b/client/resources/assets/partials/header.html
@@ -1,4 +1,4 @@
-<div class="title">Marketing Experiments</div>
+<div class="title"><a class="/"> Marketing Experiments</a></div>
 
 <ul class="controls">
     {{#user}}
