Preparing to add experiment

--- a/client/resources/assets/partials/add-experiment.html
+++ b/client/resources/assets/partials/add-experiment.html
@@ -1,1 +1,9 @@
-Hi
+<section class="page-container">
+    <h2>Create a new experiment</h2>
+
+    <div class="add-experiment-form">
+        <textarea maxlength="60" class="experiment-title" name="title" placeholder="Title"></textarea>
+
+        <label>Goal</label>
+    </div>
+</section>
